# edu.case.BFD9000

./: .dockerignore  .envrc  .gitignore  .pylintrc  AGENTS.md  BoltonSubjects2.xlsx  CHANGES.md  CLAUDE.md  DEPLOY.md  Dockerfile  Makefile  PLANNING_TRIAGE.md  README.md  TODO.md  docker-compose.yml  docker.md  flake.nix  pyrightconfig.json
bbc_clean/: README.md
bbc_merge/: README.md
bfd9000_dicom/: CONVERTER_REFACTORING.md  Pipfile  README.md  REFACTORING_SUMMARY.md  plan.md  pyproject.toml  requirements.txt
bfd9000_dicom/bfd9000_dicom/: __init__.py  models.py  tiff2dcm.py
bfd9000_dicom/bfd9000_dicom/converters/: README.md  __init__.py  base.py  compression.py  document.py  jpeg.py  pdf.py  photograph.py  png.py  radiograph.py  router.py  stl.py  surface.py  tiff.py  utils.py
bfd9000_dicom/bfd9000_dicom/core/: __init__.py  compression.py  dicom_builder.py  utils.py
bfd9000_dicom/bfd9000_dicom/extractors/: __init__.py  base.py  bolton_brush.py
bfd9000_dicom/bfd9000_dicom/old/: dicom_tags.py  tiff2dcm.py
bfd9000_dicom/docs/: DTO_ARCHITECTURE.md
bfd9000_dicom/examples/: basic_usage.py  converter_examples.py
bfd9000_dicom/tests/: README.md  test_bolton_brush.py  test_compression.py  test_converters.py  test_dicom_tags.py  test_integration.py  test_tiff2dcm.py
bfd9000_web/: .dockerignore  .env.example  DEV_SCRATCHPAD.md  Dockerfile  README.md  db.sqlite3  docker-compose.yml  dot-env.example  entrypoint.sh  manage.py  requirements-dev.txt  requirements.txt
dev_tools/: mock_bfd9010.py
documentation/: README.md  treerez_logbook.ipynb
(+122 files in other folders)
